syntax = "proto3";

package join;

option go_package = "join/";

message JoinRequest {
    
}

message JoinResponse {
    int32 id = 1;
}
